--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -8,29 +8,49 @@
 </head>
 
 <body>
-
-    <header>
-        <div id="head">
-            <h1>Emanuel Pires</h1>
-            <ul>
-                <li><a href="index.html">About</a></li>&NonBreakingSpace;
-                <li><a href="portfolio.html">Portfolio</a></li>&NonBreakingSpace;
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-    </header>
+    <div class="head1">
+        <header>
+            <div class="insideheader">
+                <h1>Emanuel Pires</h1>
+                <ul>
+                    <li class="first"><a href="index.html">About</a></li>
+                    <li class="first"><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </header>
     </div>
 
-    <h2>About Me</h2>
-    <section>
-        <img src="assets/images/Linkedin Pic.jpg" alt="" class="image-bio">
-        <p>My name is Emanuel but alot of people call me E-Man. I'm a fan of comedy, and music.
-            I like to do podcasts and you can hear my podcasts <a href="https://soundcloud.com/jayhawk-live">here</a>
-        </p>
-    </section>
 
+    <div class="mainconcontainer">
+
+        <h2>About Me</h2>
+
+        <p><img src="assets/images/LinkedinPic.jpg" alt="" class="image-bio">My name is Emanuel but alot of people
+            call
+            me E-Man. I'm a fan of comedy, and music.
+            I like to do podcasts and you can hear my podcasts <a href="https://soundcloud.com/jayhawk-live">here.</a>
+            Also I really like soccer and since I'm trying to fill up this and hoping that
+            this text wraps around the bottom of my image, I'll tell you more about the
+            soccer teams I like. Boca Juniors is my ride or die team and they're from Buenos Aires.
+            Currently they're playing the Copa Libertadores tournament as well as their national tournament.
+            Copa Libertadores is the same as the champions league, which happens in Europe.
+            Copa Lib, as I like to call it goes down in South America. While many fall in love
+            with the glitz and glamour of Champions League, Copa Lib provides a brutal
+            tournament where you'll see much rougher play and alot more controversy.
+            Also Copa Lib will provide you a glimpse at the future European stars of tomorrow.
+            From the likes of Neymar, Falcao, and recently transfered Arthur you can see
+            the South American stars that will be future European superstars. Boca Plays
+            this week against a team called Palmeiras from Brazil and they are probably
+            going to lose.
+        </p>
+
+    </div>
     <footer>
         copyright 2018.
     </footer>
 </body>
+
+
 
 </html>
