--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,53 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
-    <title>Portfolio Page!</title>
+    <title>Emanuel's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 </head>
 
 <body>
-    <header>
-        <h1 class="bio-name">Emanuel Pires</h1>
-        <nav>
-            <a href="index.html" class="myabout">About</a>
-            <a href="portfolio.html" class="myportfoliio">Portfolio</a>
-            <a href="contact.html" class="mycontact">Contact</a>
-        </nav>
-    </header>
+    <div class="head1">
+        <header>
+            <div class="insideheader">
+                <h1>Emanuel Pires</h1>
+                <ul>
+                    <li class="first"><a href="index.html">About</a></li>
+                    <li class="first"><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </header>
+    </div>
 
 
+    <div class="mainconcontainer">
+
+        <h2>Portfolio</h2>
+        <img src="assets/images/angello-lopez-530064-unsplash.jpg" class="porty">
+        <img src="assets/images/carl-nenzen-loven-787998-unsplash.jpg" class="porty">
+        <img src="assets/images/holger-link-748321-unsplash.jpg" class="porty">
+
+        <!-- I know this is a terrible way to add the label to the picture -->
+
+        <div class="para">
+            First Pic
+        </div>
+        <div class="para1">
+            Second Pic
+        </div>
+        <div class="para2">
+            Third Pic
+        </div>
+
+    </div>
+
+    <footer>
+        copyright 2018.
+    </footer>
 </body>
+
+
 
 </html>
