--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
     <footer class="page-footer teal">
       <div class="container">
-        <div class="row center-align">
+        <div class="center-align">
         <span><a href="https://www.linkedin.com/in/emanuel-pires/"><i class="fab fa-linkedin-in fa-2x"></i></span></a>
         <span><a href="https://github.com/EmanuelPires"><i class="fab fa-github fa-2x"></i></span></a>
         <span><a href="https://soundcloud.com/thesable"><i class="fab fa-soundcloud fa-2x"></i></span></a>
