--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   </div>
 </div>
             </div>
-            <div class="col s12 m6 l4">
+            <!-- <div class="col s12 m6 l4">
               
               <div class="card-panel hoverable z-depth-1"> <h4> Trivia Game </h4>
                     <div class="card-image">
@@ -170,6 +170,24 @@
                           <div class="card-action teal-text">
                             <a href="https://emanuelpires.github.io/TriviaGame/" target="_blank">Try it now!</a>
                             <a href="https://github.com/EmanuelPires/TriviaGame" target="_blank" class="float right">See the code</a>
+                          </div>
+              </div>
+
+            </div> -->
+            <div class="col s12 m6 l4">
+              
+              <div class="card-panel hoverable z-depth-1"> <h4> Toolit </h4>
+                    <div class="card-image">
+                            <img src="ToolitPort.png" class="responsive-img" id="p3">
+                            <span class="card-title"><h5> Tool Rental Service Application</h5></span>
+                            <hr>
+                          </div>
+                          <div class="card-content">
+                            <p>Need an expensive tool just for a short while. Find people near you who are renting out their tools.</p>
+                          </div>
+                          <div class="card-action teal-text">
+                            <a href="https://vast-savannah-40648.herokuapp.com/" target="_blank">Try it now!</a>
+                            <a href="https://github.com/EmanuelPires/ToolRental2" target="_blank" class="float right">See the code</a>
                           </div>
               </div>
 
